--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <h1>Month of Pizza Lunches</h1>
+    <h1>Monthly Pizza Launches</h1>
     <p>Welcome to a basic static HTML page powered by Azure Web Apps! Here are some of the yummy pizzas you can soon order online!</p>
     
     <table>
